--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="card-container">
       <div class="card">
       <div class="card-image">
-        <img src="/Laboratorio 6/img/charmander.png" alt="charmander">
+        <img src="./img/charmander.png" alt="charmander">
       </div>
       <div class="card-text">
         <h1><i class="fas fa-fire">Charmander</i></h1>
